Added IntelliJ folder to .gitignore and docu for callback endpoint
